pub mod pending_car_queue {
    tonic::include_proto!("has.pendingcarqueue");
}
pub mod records {
    tonic::include_proto!("has.records");
}
pub mod running_observer {
    tonic::include_proto!("has.runningobserver");
}

pub mod aggrigated_change_broadcaster {
    tonic::include_proto!("has.aggrigatedchangebroadcaster");
}

pub mod file_persistance {
    tonic::include_proto!("has.filepersistance");
}
